@@ -289,7 +289,7 @@ public class Application extends IGRPBaseActiveRecord<Application> implements Se
 	}
 
 	public Map<Object, Object> getListApps() {
-		User user = (User) Core.getCurrentUser();
+		User user = Core.getCurrentUser();
 		return Core.toMap(getListMyApp(user.getId()), "id", "name", gt("-- Selecionar --"));
 	}
 
@@ -323,17 +323,16 @@ public class Application extends IGRPBaseActiveRecord<Application> implements Se
 		}		
 		if(!list.isEmpty()){
 			list=list.stream() 
-					.filter(distinctByKey(p -> p.getType_fk())) 
-					.collect(Collectors.toList());
-				list.sort(Comparator.comparing(Profile::getType_fk));
-			if(allInative) {
-			list.stream().peek(e->listApp.add(e.getProfileType().getApplication()))
-			.collect(Collectors.toList());
-			}else {
-			list.stream().filter(profile->profile.getOrganization().getApplication().getStatus()==1)
-			.peek(e->listApp.add(e.getProfileType().getApplication()))
-			.collect(Collectors.toList());
-			}
+					.filter(distinctByKey(Profile::getType_fk))
+					.sorted(Comparator.comparing(Profile::getType_fk)) 
+					.toList();
+				if (allInative) {
+					list.forEach(profile -> listApp.add(profile.getProfileType().getApplication()));
+				} else {
+					list.stream()
+						.filter(profile -> profile.getOrganization().getApplication().getStatus() == 1)
+						.forEach(profile -> listApp.add(profile.getProfileType().getApplication()));
+				}
 			
 			
 			listApp.sort(Comparator.comparing(Application::getId).reversed());
@@ -343,7 +342,7 @@ public class Application extends IGRPBaseActiveRecord<Application> implements Se
 	}
 
 	public boolean getPermissionApp(String dad) {
-		User u = (User) Core.getCurrentUser();
+		User u = Core.getCurrentUser();
 		Profile p = new Profile().find()
 				.andWhere("type", "=", "ENV")
 				.andWhere("user", "=", u.getId())
@@ -354,16 +353,16 @@ public class Application extends IGRPBaseActiveRecord<Application> implements Se
 	}
 
 	public List<Profile> getMyApp() {
-		User u = (User) Core.getCurrentUser();
-		List<Profile> list = new Profile().find()
+		User u = Core.getCurrentUser();
+		List<Profile> list = new Profile().find().keepConnection()
 				.andWhere("type", "=", "ENV")
-				.andWhere("user", "=", u.getId())
+				.andWhere("user.id", "=", u.getId())
 				.andWhere("type_fk", ">", 1).all();
 		list=list.stream() 
-			.filter(distinctByKey(p -> p.getType_fk())) 
-			.collect(Collectors.toList());
-		list.sort(Comparator.comparing(Profile::getType_fk));
-	
+			.filter(distinctByKey(Profile::getType_fk))
+			.sorted(Comparator.comparing(Profile::getType_fk))
+			.toList();
+//		list.sort(Comparator.comparing(Profile::getType_fk));
 		return list;
 	}
 	
@@ -375,8 +374,9 @@ public class Application extends IGRPBaseActiveRecord<Application> implements Se
 		if(list!=null && !list.isEmpty()) {
 			list=list.stream() 
 				.filter(distinctByKey(Profile::getType_fk)) 
-				.collect(Collectors.toList());
-			list.sort(Comparator.comparing(Profile::getType_fk));
+				.sorted(Comparator.comparing(Profile::getType_fk))
+				.toList();
+//			list.sort(Comparator.comparing(Profile::getType_fk));
 			return list;
 		}
 		return null;
@@ -395,7 +395,7 @@ public class Application extends IGRPBaseActiveRecord<Application> implements Se
 		List<Profile> list = this.getAllProfile(dad);
 		List<User> users = null; 
 		if(list != null)
-			 users = list.stream().filter(p->p.getUser() != null && !p.getUser().getUser_name().equals("root")).map(m->m.getUser()).distinct().collect(Collectors.toList()); 
+			 users = list.stream().filter(p->p.getUser() != null && !p.getUser().getUser_name().equals("root")).map(m->m.getUser()).distinct().toList(); 
 		return users; 
 	}
 	
@@ -501,7 +501,7 @@ public class Application extends IGRPBaseActiveRecord<Application> implements Se
 		this.plsql_code = plsql_code;
 	}
 
-	public LinkedHashMap<String, String> getAtivesEstadoRegisto() {
+	public Map<String, String> getAtivesEstadoRegisto() {
 		 LinkedHashMap<String, String> m = new  LinkedHashMap<>();
 		 m.put(null, "--- Selecionar ---");
 		 m.put("1", "Externo"); 
